# quizcourse

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 607de1b752e5_initial_migration.py
backend/app/models/: __init__.py  answer.py  attempt.py  question.py  quiz.py  user.py
backend/app/routers/: __init__.py  attempts.py  auth.py  quizzes.py
backend/app/schemas/: __init__.py  answer.py  attempt.py  question.py  quiz.py  user.py
backend/app/utils/: deps.py  security.py
backend/tests/: conftest.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/quizzes/: page.tsx
frontend/src/app/quizzes/[id]/: page.tsx
frontend/src/app/quizzes/[id]/take/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/results/[attemptId]/: page.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  ThemeToggle.tsx  Timer.tsx  index.ts
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useTimer.ts
frontend/src/lib/: api.ts  auth.ts  utils.ts
frontend/src/types/: index.ts
